--- a/WithdrawCreated.html
+++ b/WithdrawCreated.html
@@ -162,7 +162,7 @@
                   "
                 />
               </p>
-              <h1>Transferencia realizada con éxito.</h1>
+              <h1>Solicitud de retiro creada</h1>
               <div style="
                border-color: #D2D2D2;
               border-style: solid;
@@ -175,13 +175,13 @@
               text-align: left;
              
               ">
-                Hola {{name }},
+                Hola {{ name }},
                 <br />
                 <br />
-                Se completó su transferencia de ${{ amount }} a Arriba desde su cuenta bancaria. 
+                Iniciaste un retiro en Arriba por {{ amount }}. Lo depositaremos en tu cuenta en las próximas 24 horas. Una vez que lo hayamos depositado, podrás crear otro retiro.
                 <br />
                 <br />
-                Si tiene alguna pregunta, consulte nuestro Centro de Ayuda dentro de la aplicación.
+                Si tiene alguna pregunta, consulte nuestro Centro de Ayuda dentro de la aplicación. Tambien puedes responder a este correo.
               </p>
             </div>
 
